--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>濾心管理系統</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
-  <link rel="stylesheet" href="style.css"> <style>
+  <link rel="stylesheet" href="style.css"> 
   <style>
     /* 您的 CSS 樣式保持不變 */
     /* 新增登入頁面樣式 */
