--- a/index.html
+++ b/index.html
@@ -284,9 +284,11 @@
               remainingDays = Math.max(0, remainingDays);
 
               if (remainingDays <= 0) {
-                tr.classList.add("status-expired");
+                tr.classList.add("status-expired"); // 壽命到期
               } else if (remainingDays < 30) {
-                tr.classList.add("status-warning");
+                tr.classList.add("status-warning"); // 即將到期（剩餘天數少於 30 天）
+              } else {
+                tr.classList.add("status-ok");     // 壽命充足（剩餘天數大於等於 30 天）
               }
 
               const tdName = document.createElement("td");
